tests/ui/parser/recover/recover-field-extra-angle-brackets.stderr
error: unmatched angle bracket
  --> $DIR/recover-field-extra-angle-brackets.rs:5:19
   |
LL |     first: Vec<u8>>,
   |                   ^
   |
help: remove extra angle bracket
   |
LL -     first: Vec<u8>>,
LL +     first: Vec<u8>,
   |

error: aborting due to 1 previous error

